--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "date-and-time": "^2.4.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
