--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,3 +2,5 @@ PORT = 5000
 DATABASE_URL='mongodb://localhost:27017/mern_blog'
 SECRET=naimur
 COOKIE_EXP=7
+USER_EMAIL=nrasel452@gmail.com
+USER_PASSWORD=hcsvuuuwkxnnryvl
